	are no complete cases: they used to give NA if
	method = "pearson" but an error for the other two methods.  (Note
	that this is pretty arbitrary, but zero-length vectors always
	give an error so it is at least consistent.)

	cor(use="pair") used to give diagonal 1 even if the variable
	was completely missing for the rank methods but NA for the
	Pearson method: it now gives NA in all cases.

    o	[[""]] was matching a name of "", even though "" is documented
	to match no name in indexing.

    o	attributes<-() could return a changed value if there was an
	error in the computations, e.g. an invalid value for an
	attribute being set.

    o	The AIC() S4 generic in package stats4 no longer disables
	dispatch of S3 methods for AIC().

    o	Supplying edit.row.names = TRUE when editing a matrix without
	row names is now an error and not a segfault. (PR#10500)

    o	R no longer ignores SIGPIPE signals even in processes launched
	by system().  Instead PR#1959 is handled by a simple error
	handler which will give an error message in circumstances
	where none was given before.

    o	The error handler in the parser reported unexpected
	& as && and | as ||.

    o	The conflicts check in library() excluded all S4 generics, even
	where they were unrelated to the function masked.  It is now
	more selective (although still too generous to S4 generics).

    o	ps.options(reset = TRUE) had not reset for a long time.

    o	paste() and file.path() no longer allow NA_character_ for
	their 'sep' and 'collapse' arguments.

    o	by() failed for 1-column matrices and dataframes.  (PR#10506)
	However, to preserve the old behaviour, the default method
	when operating on a vector still passes subsets of the vector
	to FUN, and this is now documented.

    o	capture.output() completes an incomplete final line of
	output when file = NULL.  (PR#10534)

    o	capture.output() now returns invisibly if output is written to
	a file/connection.
